--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
+    <title>Lord of the Rings</title>
+    <link rel="icon" href="https://img.icons8.com/color/50/000000/gandalf.png"/>
     <script src = "index.js"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id='titles'>
+
+        <h1>LoTR Reference</h1>
+        <h2>A Character Search</h2>
+
+    </div>
+    <div id="main">
+
+        <div id="info-container">
+
+        </div>
+
+    </div>
 
 </body>
 </html>
